<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.pheonixhkbxoic</groupId>
    <artifactId>a2a4j-examples</artifactId>
    <version>2.0.0</version>
    <packaging>pom</packaging>

    <name>a2a4j-examples</name>
    <description>a2a4j examples</description>
    <url>https://github.com/PheonixHkbxoic/a2a4j-examples</url>

    <modules>
        <module>hosts</module>
        <module>agents</module>
        <module>notification-listener</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <springboot.version>3.4.5</springboot.version>
        <a2a4j.version>2.0.0</a2a4j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${springboot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-configuration-processor</artifactId>
                <version>${springboot.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.pheonixhkbxoic</groupId>
                <artifactId>a2a4j-agent-mvc-spring-boot-starter</artifactId>
                <version>${a2a4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.PheonixHkbxoic</groupId>
                <artifactId>a2a4j-agent-webflux-spring-boot-starter</artifactId>
                <version>${a2a4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pheonixhkbxoic</groupId>
                <artifactId>a2a4j-host-spring-boot-starter</artifactId>
                <version>${a2a4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pheonixhkbxoic</groupId>
                <artifactId>a2a4j-notification-mvc-spring-boot-starter</artifactId>
                <version>${a2a4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pheonixhkbxoic</groupId>
                <artifactId>a2a4j-notification-webflux-spring-boot-starter</artifactId>
                <version>${a2a4j.version}</version>
            </dependency>

            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j-open-ai</artifactId>
                <version>1.0.0-beta3</version>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.5.18</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.2</version>
                <configuration>
                    <doclint>none</doclint>
                    <tags>
                        <tag>
                            <name>date</name>
                            <placement>t</placement>
                            <head>create date:</head>
                        </tag>
                        <tag>
                            <name>desc</name>
                            <placement>t</placement>
                            <head>function description:</head>
                        </tag>
                    </tags>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>install</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>install</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
